--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MarIAna terapeuta</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilo.css">
-    
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="estilo.css" />
+  </head>
+  <body>
+    <!-- Agora tudo está dentro de um único container principal -->
     <div class="main-content">
-        <img src="mari.png" alt="Ilustração da Mariana, seu assistente virtual">
+        <img src="mari.png" alt="Ilustração da Mariana, seu assistente virtual" />
         
+        <!-- O parágrafo agora faz parte do card principal -->
+        <p class="apresentacao-texto">
+            Meu projeto é um chatbot de terapia com inteligência artificial, treinado para oferecer respostas acolhedoras e empáticas. O objetivo é facilitar o acesso a um apoio emocional simples e disponível a qualquer momento, mas sem substituir o acompanhamento profissional.
+        </p>
+
         <a href="inicio.html">
             <button>Conversar com marIAna</button>
         </a>
     </div>
-</body>
+  </body>
 </html>
