--- a/inicio.html
+++ b/inicio.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="chat-input-area">
-        <input type="text" id="message-input" placeholder="Digite sua mensagem terapêutica..." />
+        <input type="text" id="message-input" placeholder="digite sua mensagem..." />
         <button id="send-button">↩</button>
       </div>
 
