--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <!-- O parágrafo agora faz parte do card principal -->
         <p class="apresentacao-texto">
-            Meu projeto é um chatbot de terapia com inteligência artificial, treinado para oferecer respostas acolhedoras e empáticas. O objetivo é facilitar o acesso a um apoio emocional simples e disponível a qualquer momento, mas sem substituir o acompanhamento profissional.
+            Este projeto é um chatbot de terapia com inteligência artificial, treinado para oferecer respostas acolhedoras e empáticas. O objetivo é facilitar o acesso a um apoio emocional simples e disponível a qualquer momento, mas sem substituir o acompanhamento profissional.
         </p>
 
         <a href="inicio.html">
